# 3dvla-starvla_framework

./: .deepspeed_env  .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  LICENSE  README.md  demo_run_hui.py  development.md  pyproject.toml  pyrightconfig.json  readme-deployment.md  requirements.txt  run_qwenpi.md
.bar/: qwenvla_cotrain.yaml
.claude/: settings.local.json
InternVLA/dataloader/: __init__.py  lerobot_datasets.py  lerobot_datasets_libero.py  lerobot_datasets_oxe.py  vlm_datasets.py
InternVLA/model/: tools.py
InternVLA/training/: train_internvla.py  train_internvla_cotrain.py  train_qwenvl.py  train_qwenvla.py  train_qwenvla_cotrain.py
code/dataloader/: __init__.py  lerobot_datasets_libero.py  lerobot_datasets_oxe.py  vlm_datasets.py
code/training/: train_qwenvl.py  (+2 more)
docs/: VLM_framework_algorithm_deep_summary.md  environment_setup.md  fusion_strategies.md  geometry_injection_approaches.md  research_plan_direct_3d_injection.md  training_plan_geom_ablation.md  ultimate_prompt_algorithm_upgrade.md
eval/: LIBERO
examples/: eval_protocol.md
llavavla/: llavavla_base.yml
playground/: Pretrained_models
real_deployment/: controller.py  model_controller_del_ee.py  model_controller_del_ee_server.py
scripts/: align_qwen_dit.py  deploy.py  temp_tools.py  train.py  train_qwen.py  train_qwen_qformer_dit.py  train_qwenact.py
sim_cogact/: cogact_policy.py
starVLA/: 开发日志  开发日志.txt
tools/: build_mapanything_llava3d_base.py  check_layerscale_names.py  deploy_to_server.sh  fetch_latest_run_files.sh  run_remote_train.sh  tail_latest_trainlog.sh  verify_action_forward_from_dataset.py  verify_llava_loading.py  verify_vlm_generate_from_dataset.py
(+387 files in other folders)
